Fix register page horizontal scrolling

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -303,6 +303,10 @@ div#height_upload_div.uploaded{
   img.img-responsive.thumbs-up {
     width: 50%;
   }
+  html, body {
++    max-width: 100% !important;
++    overflow-x: hidden;
++  }
 }
 select {
   -moz-appearance: none;
